2005-07-03  Hans Breuer  <hans@breuer.org>

	* app/diagram_tree.c : dont leak display name
	* app/app_procs.c : dont leak GOptionContext
	* app/prop_widgets.c(frame_beginprop_get_widget) : 
	Gtk api still not eating strings ...

	* objects/UML/class.c() : don't load properties	once more 
	which are already loaded by StdProps. In case of strings 
	(data_string) it has even produced leaks.

	* app/paginate_psprint.c app/diagram.[hc] : the last
	of the related dialogs is gone and with it the 
	misconception of destroying widgets from 
	diagram::finalize()
	* app/display.c : ensure the diagram is still threre
	when we remove the display from it's list

2005-07-01  Hans Breuer  <hans@breuer.org>

	* lib/widgets.c(dia_color_selector_more_callback): dont 
	free old_color twice

	* plug-ins/wmf/wmf.cpp : finally added enahnced meta file
	option. Thus linestyles can be preserved on export - at 
	least on NT based systems.

	* NEWS : clarify the wmf outside of windows issue

	* app/modify_too.c : fix C99ism

	* objects/standard/arc.c : debug spew optional at compile time

2005-06-26  Hans Breuer  <hans@breuer.org>

	[ Cyrille would call it: warningectomy :-]

	* lib/font.c app/create_object.c : `...' might be used uninitialized
	in this function. Yes they were.
	* app/modify_tool.c : modify_tool.c:610: warning: `obj' might be used 
	uninitialized in this function. Yes it was with textedit_activate_object()
	Also some static correctness.
	* lib/diarenderer.c:678: warning: no previous prototype for 
	`calculate_min_radius'. Made static.
	* lib/dia_svg.c : ptr is a gchar *
	* dia_xml.c(data_point,data_rectangle) : gchar *str for parsing
	* lib/prop_text.c(multistringprop_get_widget) : use G_CALLBACK
	* app/app_procs.c : confirm warning and make dump_dependencies() static
	* app/autosave.c : #if 0'd old stuff
	* app/display.c : GTK_CHECK_MENU_ITEM() for snap_to_grid
	* 
	* lib/text.c lib/font.c objects/standard/line.c object/UML/class.c